src/rlp/css/rlp.css
/* Global */
body {
  background-color: #beb9b8;
}

.full-container {
  background-color: #3d3d3d;
  width: 100% auto;
  height: 100% auto;
  font-family: 'Quicksand', sans-serif;
 }

/* Top Box */
.top {
  width: 100%;
  height: 33% auto;
}

.top img {
  width: 75%;
  margin: 20 0 0 0;
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, 0%);
  border: 1px solid black;
}

.t-right {
  display:none;
}

/* Middle Box */
.middle {
  width:100%;
  height: 33% auto;
}

.middle h1 {
  font-size: 4em;
  text-align: center;
  margin: 15 0 15 0;
  color: #d1cbc4;
}

.middle p {
  font-size: 2em;
  text-align: left;
  margin: 15 10 10 25;
  color: #969291;
}

.middle button {
  width: auto;
  font-size: 2em;
  margin: 0 0 15 26;
  background-color: #969291;
  color: #d1cbc4;
  border: 1px solid #d1cbc4;
}

.middle button:hover {
  color: #3d3d3d;
}


/*Bottom Box */
.bottom {
  width: 100% auto;
  height: 33%;
  background-color: #beb9b8;
}

.b-left {
  width: 50% auto;
  float:left;
  margin-bottom: 10px;
}

.b-left h1 {
  font-size: 1.5em;
  color: #3d3d3d;
  text-align: left;
  margin: 25 0 0 25;
  text-decoration: underline;
}

.b-left ul {
  list-style: none;
}

.b-left ul li {
  font-size: 1.25em;
  text-align: left;
  margin: 25 0 0 25;
} 

.b-left ul li:hover {
  color: #cccccc;
}

.b-left ul li {
  border-bottom: 1px solid #969291;
}

.b-right {
  width:50%;
  float:right;
}

.b-right h1 {
  font-size: 1.5em;
  color: #3d3d3d;
  text-align: left;
  margin: 20 0 0 40;
  text-decoration: underline;
}

.b-right ul i {
  display: block;
  font-size: 2em;
  margin: 20 0 0 90;
}

.b-right ul i:hover {
  color: #cccccc;
}

/* Tablet Sizes */
@media (min-width: 768px) {
  
  .t-right {
    display:none;
  }  
}

/* Desktop Sizes */
@media (min-width: 1200px) {

/* Top Image and Right Articles */
  .top img {
    width: 75%;
    margin: 35 0 0 0;
    position: relative;
    top: 50%;
    left: 50%;
    transform: translate(-62%, 0%);
  }

 .t-right {
    display: block;
    width: 20%;
    float: right;
    margin: 27 5 0 5;
  }

  .t-right h1 {
    font-size: 2em;
    text-align: left;
    color: #969291;
    margin-bottom: 20px;
    border-bottom: 1px solid #d1cbc4;
  }

  .t-right li {
    list-style: none;
    font-size: 1em;
    text-align: left;
    color: #969291;
    margin-bottom: 20px;
  }

  .t-right li:hover {
    color: #cccccc;
  }

  /* Middle - Cleanup Desktop font alignment */
  .middle h1 {
    text-align: left;
    margin-left:65;
  }

  .middle p {     
    margin-left: 65;
    margin-bottom: 10;
    }

  .middle button {
    margin: 10 0 20 65;    
  }    
}

